--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@ body {
     line-height: 1.6;
     background-color: #f9f9f9;
     color: #333;
+    margin: 10 100px;
     padding: 10 100px;
 }
 
